# mochi

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/basic_fsm_walk_20260517/: plan.md  spec.md
conductor/archive/gravity_fall_20260518/: index.md  metadata.json  plan.md  spec.md
conductor/archive/overlay_window_20260517/: index.md  metadata.json  plan.md  spec.md
conductor/archive/scaffold_20260517/: index.md  metadata.json  plan.md
conductor/archive/sprite_idle_20260517/: index.md  metadata.json  spec.md
conductor/archive/window_polling_20260517/: index.md  metadata.json  plan.md  spec.md
conductor/code_styleguides/: python.md
conductor/tracks/basic_fsm_walk_20260517/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/gravity_fall_20260518/: plan.md  spec.md
conductor/tracks/overlay_window_20260517/: plan.md  spec.md
conductor/tracks/scaffold_20260517/: plan.md  spec.md
conductor/tracks/sprite_idle_20260517/: plan.md  spec.md
conductor/tracks/window_polling_20260517/: metadata.json  plan.md  spec.md
docs/: PRD.md  ROADMAP.md  TDD.md
scripts/: check_file_length.py
src/mochi/: __main__.py  config.py  main.py
src/mochi/core/: __init__.py  canvas.py  environment.py  fsm.py  physics.py
src/mochi/ui/: sprites.py
src/mochi/utils/: logger.py  (+1 more)
tests/: test_animation.py  test_canvas.py  test_config.py  test_environment.py  test_fsm.py  test_logger.py  test_main.py  test_physics.py  test_platform.py  test_sprites.py
